# loogy

./: .gitignore  LICENSE  README.md  README_2.md  requirements.txt  setup.py
buggy/: buggy.py
logs_are_all_you_need/: .gitignore  README.md  develop_topic.py  pyproject.toml  setup.py  unit_tests.py  unit_tests_results.txt
logs_are_all_you_need/outputs/: codebase.py  tests_results.md  tests_results.txt  unit_tests.py
logs_are_all_you_need/src/logs_are_all_you_need/: app.py  crew.py  main.py  process_dataset.py  pyproject.toml
logs_are_all_you_need/src/logs_are_all_you_need/config/: agents.yaml  tasks.yaml
loogy/: README.md  __main__.py  app.py  crew.py  main.py
loogy/config/: agents.yaml  tasks.yaml
loogy/src/loogy/: app.py  pyproject.toml
scripts/: install_dev.sh
streamlit/: README.md  README_CLOUD.md  app.py  import_helper.py  requirements.txt  requirements_cloud.txt  setup.py
streamlit/.streamlit/: config.toml
